==> edgeimpulse/firmware-nordic-nrf52840dk-nrf5340dk/edge-impulse/ingestion-sdk-platform/NordicSemi-nrf52/ei_device_nordic_nrf52.cpp <==
#include "ei_device_nordic_nrf52.h"
#include "ei_zephyr_flash_commands.h"
#include "ei_microphone.h"
#include "ei_inertialsensor.h"
#include "repl.h"
#include <cstdarg>
#include "math.h"
#include <sys/printk.h>
#include <drivers/uart.h>
#define EI_LED_BLUE     BOARD_ledSetLedOn(1, 0, 0, 0)
#define EI_LED_GREEN    BOARD_ledSetLedOn(0, 1, 0, 0)
#define EI_LED_YELLOW   BOARD_ledSetLedOn(0, 0, 1, 0)
#define EI_LED_RED      BOARD_ledSetLedOn(0, 0, 0, 1)
#define EI_LED_OFF      BOARD_ledSetLedOn(0, 0, 0, 0)
#define DEVICE_ID_MAX_SIZE  32
#define EDGE_STRINGIZE_(x) #x
#define EDGE_STRINGIZE(x) EDGE_STRINGIZE_(x)

bool EiDeviceNRF52::get_sensor_list(const ei_device_sensor_t **sensor_list, size_t *sensor_list_size)
{
    /* Calculate number of bytes available on flash for sampling, reserve 1 block for header + overhead */
    uint32_t available_bytes = (ei_zephyr_flash_get_n_available_sample_blocks()-1) * ei_zephyr_flash_get_block_size();

    sensors[ACCELEROMETER].name = "Accelerometer";
    sensors[ACCELEROMETER].start_sampling_cb = &ei_inertial_setup_data_sampling;
    sensors[ACCELEROMETER].max_sample_length_s = available_bytes / (100 * SIZEOF_N_AXIS_SAMPLED);
    sensors[ACCELEROMETER].frequencies[0] = 62.5f;
    sensors[ACCELEROMETER].frequencies[1] = 100.0f;

    sensors[MICROPHONE].name = "Microphone";
    sensors[MICROPHONE].start_sampling_cb = &ei_microphone_sample_start;
    sensors[MICROPHONE].max_sample_length_s = available_bytes / (16000 * 2);
    sensors[MICROPHONE].frequencies[0] = 16000.0f;

    *sensor_list      = sensors;
    *sensor_list_size = EI_DEVICE_N_SENSORS;

    return false;
}

void EiDeviceNRF52::delay_ms(uint32_t milliseconds)
{
    k_msleep((int32_t)milliseconds);
}

uint64_t EiDeviceNRF52::get_ms(void)
{
    return (uint64_t)k_uptime_get();
}
